--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "lint": "npx eslint ./",
+    "prettier": "npx prettier --write ./ --ignore-unknown",
+    "prettier-check": "npx prettier --check ./ --ignore-unknown"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "prettier": "^2.7.1"
   }
 }
