--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20"
-  },
   "devDependencies": {
     "eslint": "^8.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   }
 }
