implement basic http handler (#2)
* implement basic http handler

* add ability to select which port server must listen

* made changes for the http layer that were written in the comments

* rewrite http methods and all related to it

* add ability to set status code for response and framework error handling

* set-up eslint and prettier

* set up github actions on push for lint and prettier

* test github actions

* move nodemon and eslint-pluggin-prettier to devDependencies

* implement basic http handler

* add ability to select which port server must listen

* made changes for the http layer that were written in the comments

* rewrite http methods and all related to it

* add ability to set status code for response and framework error handling

* fix all eslint and prettier errors

* fix error handler

* move json and status method to Response class

* make class methods and properties private

* rename controller to handler

* move check method support logic to createServer

* delete checkMethodSupport

* fix prettier

Co-authored-by: sasha_popovych <sashapopovych2003@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "no-prototype-builtins": ["off", "always"]
   }
 }
