add ability to use midels (#7)
* add ability to use midels

* do create model more flexible

* write new methods for define model

* move common functionallity to validate function

* make defenition of model schema in class

* make updateById function more redable

Co-authored-by: sasha_popovych <sashapopovych2003@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon src/app.js",
     "lint": "npx eslint ./",
     "prettier": "npx prettier --write ./ --ignore-unknown",
     "prettier-check": "npx prettier --check ./ --ignore-unknown"
