--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "files_popovych",
-  "version": "1.0.0",
-  "description": "files_popovych wise project",
-  "main": "server.js",
-  "type": "module",
-  "directories": {
-    "lib": "lib"
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
+    "eslint": "^8.28.0",
+    "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.0"
   },
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "lint": "npx eslint ./",
-    "prettier": "npx prettier --write ./ --ignore-unknown",
-    "prettier-check": "npx prettier --check ./ --ignore-unknown"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "client": "cd client && npm start",
+    "server": "cd server && npm run dev",
+    "lint_client": "npx eslint ./client",
+    "prettier_client": "npx prettier --write ./client --ignore-unknown",
+    "prettier_check_client": "npx prettier --check ./client --ignore-unknown",
+    "lint_server": "npx eslint ./server",
+    "prettier_server": "npx prettier --write ./server --ignore-unknown",
+    "prettier_check_server": "npx prettier --check ./server --ignore-unknown"
   }
 }
