--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "concurrently": "^7.6.0",
     "eslint": "^8.28.0",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -10,11 +10,18 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "cd server && npm run dev",
-    "lint_client": "npx eslint ./client",
+    "lint_client": "cd client && npx eslint .",
     "prettier_client": "npx prettier --write ./client --ignore-unknown",
     "prettier_check_client": "npx prettier --check ./client --ignore-unknown",
-    "lint_server": "npx eslint ./server",
+    "lint_server": "cd server && npx eslint .",
     "prettier_server": "npx prettier --write ./server --ignore-unknown",
-    "prettier_check_server": "npx prettier --check ./server --ignore-unknown"
+    "prettier_check_server": "npx prettier --check ./server --ignore-unknown",
+    "prettier": "concurrently \"npm run prettier_server\" \"npm run prettier_client\"",
+    "prettier_check": "concurrently \"npm run prettier_check_server\" \"npm run prettier_check_client\"",
+    "lint": "concurrently \"npm run lint_client\" \"npm run lint_server\"",
+    "app": "concurrently \"npm run client\" \"npm run server\""
+  },
+  "dependencies": {
+    "@babel/eslint-parser": "^7.19.1"
   }
 }
