--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,23 +1,14 @@
 {
   "env": {
     "node": true,
-    "browser": true,
     "es2021": true
   },
   "extends": "eslint:recommended",
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "requireConfigFile": false,
-    "babelOptions": {
-      "presets": ["@babel/preset-react"]
-    }
+    "sourceType": "module"
   },
-  "parser": "@babel/eslint-parser",
-
-  "plugins": ["jsx"],
-
   "rules": {
     "quotes": ["error", "single"],
     "no-prototype-builtins": ["off", "always"],
