--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,29 +1,39 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true,
+    "node": true
   },
-  "extends": ["plugin:react/recommended", "airbnb"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+    }
   },
   "plugins": ["react"],
   "rules": {
-    "quotes": ["error", "single"],
-    "no-prototype-builtins": ["off", "always"],
-    "no-unused-vars": "off",
-    "semi": "off",
     "react/react-in-jsx-scope": "off",
-    "import/no-extraneous-dependencies": "off",
-    "no-param-reassign": "off",
-    "comma-dangle": "off",
-    "import/no-named-as-default": "off",
     "react/prop-types": "off",
-    "no-nested-ternary": "off",
-    "camelcase": "off",
-    "object-curly-newline": "off",
-    "linebreak-style": "off"
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  "parser": "@babel/eslint-parser",
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
