--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.11.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
+    "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
