--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
