--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-templates": "^10.0.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
@@ -46,6 +47,7 @@
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "pug": "^3.0.2",
     "uuid": "^9.0.0"
   }
 }
