--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "axios": "^1.2.3",
     "js-file-download": "^0.4.12",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "mui-image": "^1.0.7",
+    "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-sweet-progress": "^1.1.2",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
