--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-editext": "^5.1.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
