configure docker-compose file (#38)
* configure docker-compose file

* create container for frontent and migrations

* fix bug in server container

* remove migration container

* fix bug with COPY data

* send static file from server to client

* copy build frontend folder to server

* fix knexfile

* fix bun with routes

* fix bug in delete files

* run client folder after build

---------

Co-authored-by: sasha_popovych <sashapopovych2003@gmail.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "cd server && npm run dev",
+    "server_prod": "cd server && npm run prod",
     "lint_client": "cd client && npx eslint .",
     "prettier_client": "npx prettier --write ./client --ignore-unknown",
     "prettier_check_client": "npx prettier --check ./client --ignore-unknown",
